--- a/PerpusRemake/src/main/java/com/main/user/styles.css
+++ b/PerpusRemake/src/main/java/com/main/user/styles.css
@@ -1,51 +1,35 @@
-/* styles.css */
 .grid {
     -fx-background-color: #f0f8ff;
 }
 
-.label {
-    -fx-font-size: 14px;
-    -fx-font-weight: bold;
-}
-
-.button {
-    -fx-background-color: #87cefa;
-    -fx-text-fill: white;
-    -fx-font-weight: bold;
-}
-
-.button:hover {
-    -fx-background-color: #4682b4;
-}
-
-#action-target {
-    -fx-fill: #ff0000;
-}
-
-#welcome-text {
-    -fx-font-size: 20px;
-    -fx-font-weight: bold;
-}
-
-
-/* styles.css */
-.grid {
-    -fx-background-color: #f0f8ff;
+/* Menetapkan gaya ke TextField */
+.text-field {
+    -fx-border-width: 400;
+    -fx-border-radius: 5px;
+    -fx-padding:  6 50 6 50;
 }
 
 .label {
     -fx-font-size: 14px;
-    -fx-font-weight: bold;
+    -fx-font-weight: normal;
+    -fx-font-weight: 700;
 }
 
 .button {
-    -fx-background-color: #87cefa;
-    -fx-text-fill: white;
-    -fx-font-weight: bold;
+    -fx-background-color: #353535;
+    -fx-padding: 8 80 8 80;
+    -fx-background-radius: 8;
+    -fx-text-fill: #ffffff;
+    -fx-border-color: #353535;
+    -fx-border-width: 2;
+    -fx-border-radius: 8;
+    -fx-font-weight: 800;
 }
 
 .button:hover {
-    -fx-background-color: #4682b4;
+    -fx-background-color: #ffffff;
+    -fx-text-fill: #353535;
+    -fx-border-color: #353535;
 }
 
 #action-target {
